# claude-code-proxy

./: .gitignore  AGENTS.md  CHANGELOG.md  IDEA.md  README.md  link-utili.md  package-lock.json  package.json  tsconfig.json
.agents/skills/release/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-core-proxy-server/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  (+5 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
apps/web/: package.json  tailwind.config.ts  tsconfig.tsbuildinfo
docs/: api-reference.md  architecture.md  configuration-reference.md  setup-guide.md  troubleshooting.md
e2e/: fixtures.ts  linux-smoke.spec.ts  playwright.config.ts
e2e/pages/: ModelMappingPage.ts  ProviderForm.ts  RoutingLogPage.ts  SettingsPage.ts  StatusPage.ts
e2e/tests/: 01-happy-path.spec.ts  02-provider-types.spec.ts  03-edge-cases.spec.ts  04-config-export.spec.ts  linux-smoke.spec.ts
e2e/utils/: test-helpers.ts
playwright-report/: index.html
reference/claude-proxy/: .coverage-thresholds.json  CLAUDE.md
scripts/: auto-compact-hook.js  build-linux.sh  bundle-proxy.sh  claude-code-proxy.service  context-status.js  generate-admin-mtls.sh  headless-proxy.sh  release.sh  seed-models.ts  setup.ts  sign-and-package.sh  test-nvidia-nim-live.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/proxy-bundle/: package.json
src-tauri/src/: lib.rs
(+144 files in other folders)
